examples/test/testpolicy11814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11814
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key43: value12
      key17: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value14
          key12: value34
          key35: value35
      podSelector:
        matchLabels:
          key14: value2
          key37: value29
          key29: value11
